--- a/src/responsive.css
+++ b/src/responsive.css
@@ -21,8 +21,8 @@
 .landingNav {
     display: flex;
     flex-direction: row;
-    justify-content: center;
-    margin: 10% 5%;
+    justify-content: space-around;
+    margin: 2%;
 }
 .card-img-top {
     height: 200px;
